# CollisionAlgorithm

./: .gitlab-ci.yml  CMakeLists.txt  CollisionAlgorithmConfig.cmake.in  CollisionAlgorithmPluginConfig.cmake.in  collisionAlgorithm.h  commonTypes.h  initPlugin.cpp  initPlugin.h  readme  readme.odt  references
CollisionAlgorithm/: CMakeLists.txt  CollisionAlgorithmConfig.cmake.in
CollisionAlgorithm/src/: BaseGeometry.cpp  BaseGeometry.h  Collision.h
CollisionAlgorithm/src/algorithm/: CollisionDetectionAlgorithm.cpp  CollisionDetectionAlgorithm.h  CollisionDetectionAlgorithm.inl  PointCloudBindingAlgorithm.cpp  PointCloudBindingAlgorithm.inl
CollisionAlgorithm/src/forcefield/: CollisionForceField.cpp  CollisionForceField.h
CollisionAlgorithm/src/geometry/: EdgeGeometry.h  EdgeGeometry.inl  PointGeometry.h  PointGeometry.inl  TriangleGeometry.h  TriangleGeometry.inl
ignored/: GenericElement.h  ProjectiveContourGeometry.cpp
scene/: AlgorithmTest.scn  liver.scn  quad.scn  quad.scn.qglviewer.view
scenes/: NeedleBend.scn
src/: AABBDecorator.cpp  AABBDecorator.h  AABBDecorator.inl  AABBGeometry.cpp  AABBGeometry.h  AABBGeometry.inl  BaseElement.cpp  BaseElement.h  BaseGeometry.cpp  BaseGeometry.h  BezierTriangleGeometry.cpp  BezierTriangleGeometry.h  BezierTriangleGeometry.inl  BindPointCloud.cpp  BindPointCloudReinit.cpp  Collision.cpp  Collision.h  CollisionAlgorithm.h  CollisionDetectionAlgorithm.cpp  CollisionDetectionAlgorithm.h  CollisionDetectionAlgorithm.inl  Filters.cpp  Filters.h  FindClosestPoint.cpp  FrameNormal.cpp  HybridBind.cpp  KdTreeClosestPoint.cpp  ManualBind.cpp  NewtonIteration.cpp  NormalFilter.cpp  NormalFilter.h  NormalFilter.inl  PCAPointCloud.cpp  PointCloudBindingAlgorithm.cpp  PointCloudBindingAlgorithm.h  PointCloudBindingAlgorithm.inl  TriangleNonLinearGeometry.h  collisionAlgorithm.h  grafe.h  initCollisionAlgorithmPlugin.cpp  (+4 more)
src/algorithm/: CollisionDetectionAlgorithm.cpp  CollisionDetectionAlgorithm.h  CollisionDetectionAlgorithm.inl  PointCloudBindingAlgorithm.inl
src/animationLoop/: CollisionAnimationLoop.cpp  CollisionAnimationLoop.h
src/decorator/: AABBDecorator.cpp  AABBDecorator.h  AABBDecorator.inl
src/deprecated/: BindPointCloud.cpp  BindPointCloudReinit.cpp  HybridBind.cpp  IntersectionContourGeometry.cpp  ProjectiveContourElement.h  ProjectiveContourGeometry.cpp  ProjectiveContourGeometry.h  ProjectiveContourGeometry.inl  initPlugin.cpp  kdtreeBind.cpp
src/element/: AABBElement.h  BaseElement.cpp  BaseElement.h  BezierTriangleElement.h  EdgeElement.h  IntersectionContourElement.h  PointElement.h  ProjectiveContourElement.h  TriangleElement.h
src/forcefield/: CollisionForceField.cpp  CollisionForceField.h
src/geometry/: AABBGeometry.cpp  AABBGeometry.h  AABBGeometry.inl  BezierTriangleGeometry.cpp  BezierTriangleGeometry.h  BezierTriangleGeometry.inl  EdgeGeometry.cpp  EdgeGeometry.h  EdgeGeometry.inl  IntersectionContourGeometry.cpp  IntersectionContourGeometry.h  IntersectionContourGeometry.inl  PointGeometry.cpp  PointGeometry.h  PointGeometry.inl  ProjectiveContourGeometry.cpp  ProjectiveContourGeometry.h  ProjectiveContourGeometry.inl  TriangleGeometry.cpp  TriangleGeometry.h  TriangleGeometry.inl
src/ignored/: IntersectionContourElement.h  IntersectionContourGeometry.cpp  IntersectionContourGeometry.inl  KdTreeClosestPoint.cpp
src/proximity/: BezierTriangleProximity.h  EdgeProximity.h  GenericProximity.h  IntersectionContourProximity.h  PointProximity.h  ProjectiveContourProximity.h  TriangleProximity.h
src/sandbox/: BindPointCloud.cpp  KdTreeClosestPoint.cpp  PCAPointCloud.cpp  kdtreeBind.cpp  totalDistanceBind.cpp
src/sofa/collisionAlgorithm/: BaseAABBBroadPhase.h  BaseAlgorithm.h  BaseCollisionAlgorithm.h  BaseDecorator.h  BaseDistanceMeasure.h  BaseElement.cpp  BaseElement.h  BaseElementContainer.h  BaseElementFilter.cpp  BaseElementFilter.h  BaseElementIterator.cpp  BaseElementIterator.h  BaseFilter.h  BaseGeometry.cpp  BaseGeometry.h  BaseGeometryAlgorithm.cpp  BaseGeometryAlgorithm.h  BaseGeometryModifier.cpp  BaseGeometryModifier.cpp.orig  BaseGeometryModifier.h  BaseGeometryModifier.h.orig  BaseNormalHandler.h  BaseOperation.h  BaseProximity.h  BroadPhase.h  CollisionPipeline.cpp  CollisionPipeline.h  DataDetectionOutput.h  ElementIterator.h  InternalData.h  initPlugin.cpp  toolBox.cpp  toolBox.h
src/sofa/collisionAlgorithm/algorithm/: AABBSearchMethod.cpp  AABBSearchMethod.h  BaseClosestProximityAlgorithm.cpp  BaseClosestProximityAlgorithm.h  BaseClosestProximityAlgorithm.inl  CatheterBindingAlgorithm.cpp  CatheterBindingAlgorithm.h  CollisionDetectionAlgorithm.h  CollisionDetectionAlgorithm.inl  ElementsIntersectionAlgorithm.cpp  ElementsIntersectionAlgorithm.h  Find2DClosestProximityAlgorithm.cpp  Find2DClosestProximityAlgorithm.h  FindClosestPointAlgorithm.cpp  FindClosestPointAlgorithm.h  FindClosestPointAlgorithm.inl  FindClosestProximityAlgorithm.cpp  FindClosestProximityAlgorithm.h  FindClosestProximityAlgorithm.inl  FindUniqueClosestProximityAlgorithm.cpp  FindUniqueClosestProximityAlgorithm.h  FixedAlgorithm.cpp  FixedAlgorithm.h  ManualBindAlgorithm.cpp  ManualBindAlgorithm.h  PointCloudBindingAlgorithm.cpp  PointCloudBindingAlgorithm.h  PointCloudBindingAlgorithm.inl
src/sofa/collisionAlgorithm/broadphase/: AABBBroadPhase.cpp  AABBBroadPhase.h  AABBBroadPhase.inl  FullAABBBroadPhase.cpp  FullAABBBroadPhase.h
src/sofa/collisionAlgorithm/container/: DataBezierTriangleContainer.h  DataEdgeContainer.h  DataPhongTriangleContainer.h  DataPointContainer.h  DataTriangleContainer.h
src/sofa/collisionAlgorithm/data/: ContactDistance.cpp  ContactDistance.h  DataDetectionOutput.h  DataDistanceMeasure.h
src/sofa/collisionAlgorithm/decorator/: AABBDecorator.cpp  AABBDecorator.h  AABBDecorator.inl
src/sofa/collisionAlgorithm/distanceMeasures/: Norm3Measure.cpp  Norm3Measure.h  ProjectiveDistanceMeasure.cpp  ProjectiveDistanceMeasure.h
src/sofa/collisionAlgorithm/element/: BezierTriangleElement.h  EdgeElement.h  EdgeElement.h.orig  GenericElement.h  IntersectionContourElement.h  (+3 more)
(+146 files in other folders)
